--- a/carta.html
+++ b/carta.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Carta Fundacional - Hernavia</title>
   <meta name="description" content="Carta Fundacional de Hernavia: principios, estructura y objetivos que guían a la comunidad hernaviana.">
-  <meta name="keywords" content="hernavia, Carta fundacional, proyecto cultural, identidad, comunidad, sostenibilidad, creatividad, naturaleza, agua, paz, innovación">
+  <meta name="keywords" content="hernavia, Carta fundacional, proyecto cultural, identidad, comunidad, sostenibilidad, creatividad, naturaleza, agua, paz, innovación.">
   <meta name="theme-color" content="#ffffff">
   <meta name="author" content="Proyecto Hernavia">
   <meta name="robots" content="index, follow">
@@ -22,7 +22,7 @@
     <h1>Carta Fundacional de Hernavia</h1>
   </header>
 
-  <nav class="nav-comun" aria-label="Navegación principal">
+  <nav class="nav-comun">
     <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
     <a href="documentos.html">Documentos</a>
     <a href="noticias.html">Noticias</a>
@@ -37,10 +37,10 @@
       <h2>Presentación de los Fundadores</h2>
       <p>Nosotros, los fundadores de Hernavia:</p>
       <ul>
-        <li>Hernán Coronado, Primer Arconte</li>
+        <li>Hernán Coronado, Primer Arconte.</li>
       </ul>
       <p>
-        Nos unimos para crear una comunidad, identidad y proyecto que proteja y promueva los pilares fundamentales de Hernavia: naturaleza, agua, innovación, fraternidad, paz, así como sus variantes: cohesión, unión, verdad y seguridad.
+        Nos unimos para crear una comunidad, identidad y proyecto que proteja y promueva los pilares fundamentales de Hernavia: naturaleza, agua, innovación, fraternidad y paz; así como sus variantes: cohesión, unión, verdad y seguridad.
       </p>
 
       <h2>Motivación y Propósito</h2>
@@ -102,21 +102,20 @@
       </p>
 
       <h2>Símbolos de Hernavia</h2>
-      <p>
-        <strong>Bandera:</strong>
-        <img src="img/bandera.png" alt="Bandera de Hernavia" class="bandera" width="300" height="200" loading="lazy">
-        Representa la paz, la naturaleza, la innovación y la fraternidad con Colombia.
-      </p>
-      <p><strong>Primer Arconte:</strong> Hernán Coronado</p>
+      <div style="text-align: left; margin-top: 20px;">
+        <p><strong>Bandera:</strong></p>
+        <img src="img/bandera.png" alt="Bandera de Hernavia" class="bandera" width="200" height="133" loading="lazy">
+        <p><strong>Primer Arconte:</strong> Hernán Coronado.</p>
+      </div>
 
-      <p style="text-align:center; margin-top:25px;">
+      <p style="text-align: center; margin-top: 25px;">
         <a href="documentos.html" class="boton-hernavia">Volver a Documentos</a>
       </p>
     </section>
   </main>
 
   <footer>
-    &copy; 2025 Hernavia — Proyecto Cultural
+    &copy; 2025 Hernavia — Proyecto Cultural.
   </footer>
 </body>
 </html>
