--- a/carta.html
+++ b/carta.html
@@ -54,13 +54,13 @@
       </p>
 
       <h2>Objetivos Iniciales</h2>
-      <ol>
+      <ul>
         <li>Fortalecer la unidad y cohesión de la comunidad hernaviana.</li>
         <li>Promover la educación cívica y cultural para todos los ciudadanos.</li>
         <li>Impulsar iniciativas de innovación, creatividad y progreso comunitario.</li>
         <li>Fomentar el respeto y cuidado de la naturaleza y los recursos comunes.</li>
         <li>Mantener y difundir los símbolos y la identidad de Hernavia.</li>
-      </ol>
+      </ul>
 
       <h2>Valores y Principios</h2>
       <ul>
@@ -73,14 +73,14 @@
       </ul>
 
       <h2>Compromisos de los Ciudadanos</h2>
-      <ol>
+      <ul>
         <li>Contribuir a la comunidad.</li>
         <li>Respetar las decisiones del Arconte mientras la autoridad sea provisional.</li>
         <li>Defender la paz y rechazar la violencia injustificada.</li>
         <li>Impulsar el desarrollo social mediante cooperación y esfuerzo conjunto.</li>
         <li>Respetar los símbolos y la identidad de Hernavia.</li>
         <li>Apoyar a la comunidad en momentos de crisis o emergencia.</li>
-      </ol>
+      </ul>
 
       <h2>Arconte</h2>
       <p>
@@ -102,7 +102,7 @@
       </p>
 
       <h2>Símbolos de Hernavia</h2>
-      <div style="text-align: left; margin-top: 20px;">
+      <div style="text-align: right; margin-top: 20px;">
         <p><strong>Bandera:</strong></p>
         <img src="img/bandera.png" alt="Bandera de Hernavia" class="bandera" width="200" height="133" loading="lazy">
         <p><strong>Primer Arconte:</strong> Hernán Coronado.</p>
