--- a/carta.html
+++ b/carta.html
@@ -101,16 +101,25 @@
         Esta Carta es transitoria y podrá evolucionar a medida que Hernavia crezca. Futuras constituciones podrán incorporar la participación directa de toda la comunidad. Mientras tanto, todas las acciones se guían por esta Carta y los principios de Hernavia.
       </p>
 
-      <h2>Símbolos de Hernavia</h2>
-      <div style="text-align: right; margin-top: 20px;">
-        <p><strong>Bandera:</strong></p>
-        <img src="img/bandera.png" alt="Bandera de Hernavia" class="bandera" width="200" height="133" loading="lazy">
-        <p><strong>Primer Arconte:</strong> Hernán Coronado.</p>
-      </div>
+<h2>Símbolos de Hernavia</h2>
+<div style="text-align: right; margin-top: 20px;">
+  <p><strong>Bandera:</strong></p>
+  <img 
+    src="img/bandera.png" 
+    alt="Bandera de Hernavia" 
+    class="bandera" 
+    width="150" 
+    height="100" 
+    loading="lazy" 
+    style="margin-bottom: 10px;"
+  >
+  <p><strong>Primer Arconte:</strong> Hernán Coronado.</p>
+</div>
 
-      <p style="text-align: center; margin-top: 25px;">
-        <a href="documentos.html" class="boton-hernavia">Volver a Documentos</a>
-      </p>
+<p style="text-align: center; margin-top: 25px;">
+  <a href="documentos.html" class="boton-hernavia">Volver a Documentos</a>
+</p>
+
     </section>
   </main>
 
