--- a/comounirse.html
+++ b/comounirse.html
@@ -34,6 +34,7 @@
 
 <main>
   <section class="section">
+    <h2>Formulario</h2>
     <p>
       Actualmente, la ciudadanía virtual no está habilitada.  
       Sin embargo, puedes llenar este formulario y recibirás una notificación cuando se active oficialmente.
@@ -148,7 +149,6 @@
 </footer>
 
 <script>
-  // Mostrar / ocultar preguntas frecuentes
   const toggleButton = document.getElementById('toggleFAQ');
   const faqContainer = document.getElementById('faqContainer');
   let visible = false;
@@ -172,7 +172,6 @@
     modal.style.display = "none";
   });
 
-  // Registrar Service Worker
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
       navigator.serviceWorker.register('/Hernavia/sw.js')
