--- a/noticias.html
+++ b/noticias.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Noticias de Hernavia</title>
   <meta name="description" content="Noticias relevantes para Hernavia para que conozcas los hechos importantes.">
-  <meta name="keywords" content="Hernavia, comunidad, aportes, noticias, proyecto cultural, identidad, sostenibilidad, creatividad, naturaleza, paz, innovacion"
+  <meta name="keywords" content="Hernavia, comunidad, aportes, noticias, proyecto cultural, identidad, sostenibilidad, creatividad, naturaleza, paz, innovación">
   <meta name="theme-color" content="#ffffff">
   <meta name="author" content="Proyecto Hernavia">
   <meta name="robots" content="index, follow">
