--- a/noticias.html
+++ b/noticias.html
@@ -44,9 +44,9 @@
   <main>
     <section class="texto-largo">
       <h2>Noticia 002 – Feria Empresarial en Gachancipá</h2>
-      <p>En el parque principal de Gachancipá se llevará a cabo una feria empresarial en una fecha aún por confirmar. Hernavia participará junto a Yukihert (pastelitos de yuca), presentando productos y compartiendo información sobre el proyecto.</p>
-      <p>Por el momento no hay más detalles confirmados.</p>
-
+      <p>En el parque principal de Gachancipá se llevará a cabo la Semana Cultural, del jueves 30 de octubre al domingo 2 de noviembre.</p>
+      <p>El jueves 31 de octubre, de 10:00 a.m. a 2:00 p.m., se habilitará un espacio para una feria empresarial, donde participarán varios negocios. Yukiherts venderá sus deliciosos pastelitos de yuca, y Hernavia estará presente aportando su sello de calidad y colaboración, apoyando en la planeación y con algunos materiales, sirviendo como participacion y promocion conjunta.</p>
+      <p>Durante toda la Semana Cultural habrá más actividades en Gachancipá para disfrutar.</p>
       <p style="margin-top:20px;">Fuente: Comunicación interna de Hernavia, octubre de 2025.</p>
     </section>
   </main>
