--- a/noticias-random.html
+++ b/noticias-random.html
@@ -25,12 +25,18 @@
     <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
     <a href="documentos.html">Documentos</a>
     <a href="noticias.html">Noticias</a>
-    <a href="noticias-random.html" class="active">Noticias Random</a>
     <a href="consultas.html">Consultas</a>
     <a href="simbolos.html">Símbolos</a>
     <a href="comounirse.html">¿Cómo unirse?</a>
     <a href="sugerencias.html">Sugerencias</a>
   </nav>
+  
+    <div>
+    <nav class="nav-comun">
+      <a href="noticias.html" class="activo">Noticias</a>
+      <a href="noticias-random.html" style="color:#750404; border-color:#750404;">Noticias Random</a>
+    </nav>
+  </div>
 
   <main>
     <section class="texto-largo noticias-random" aria-labelledby="recientes">
