--- a/comounirse.html
+++ b/comounirse.html
@@ -107,7 +107,7 @@
   <div class="contenido" style="background:white; padding:20px; border-radius:10px; max-width:600px; max-height:80vh; overflow-y:auto;">
     <h2>Política de Privacidad y Tratamiento de Datos</h2>
     <p>
-      En la <strong>Nación Simbólica de Hernavia</strong> protegemos tu información personal conforme a los principios de respeto, seguridad y confidencialidad.
+      En <strong>Hernavia</strong> protegemos tu información personal conforme a los principios de respeto, seguridad y confidencialidad.
     </p>
 
     <h3>1. Datos recolectados</h3>
