--- a/noticias-random.html
+++ b/noticias-random.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" >
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Noticias Random - Hernavia</title>
-  <meta name="description" content="Noticias aleatorias y curiosidades con fuentes verificadas. Actualizado con noticias recientes (octubre 2025).">
-  <meta name="keywords" content="Hernavia, noticias, noticias random, Latinoamérica, ciencia, curiosidades">
+  <meta name="description" content="Selección de noticias aleatorias, curiosidades y temas científicos con fuentes verificadas. Actualizado (octubre 2025).">
+  <meta name="keywords" content="Hernavia, noticias, curiosidades, ciencia, cultura, Latinoamérica, innovación">
   <meta name="theme-color" content="#ffffff">
   <meta name="author" content="Proyecto Hernavia">
   <meta name="robots" content="index, follow">
@@ -30,74 +30,90 @@
     <a href="comounirse.html">¿Cómo unirse?</a>
     <a href="sugerencias.html">Sugerencias</a>
   </nav>
-  
-    <div>
+
+  <!-- Submenú local -->
+  <div>
     <nav class="nav-comun">
-      <a href="noticias.html" class="activo">Noticias</a>
-      <a href="noticias-random.html" style="color:#750404; border-color:#750404;">Noticias Random</a>
+      <a href="noticias.html">Noticias</a>
+      <a href="noticias-random.html" class="activo" style="color:#750404; border-color:#750404;">Noticias Random</a>
     </nav>
   </div>
 
   <main>
-    <section class="texto-largo noticias-random" aria-labelledby="recientes">
-      <h2 id="recientes">Últimas noticias (selección)</h2>
+    <section class="texto-largo noticias-random">
+      <h2>Noticias destacadas y curiosidades</h2>
+      <p>
+        Selección de noticias verificadas y curiosidades científicas recopiladas por Hernavia.  
+        Aquí encontrarás temas variados de actualidad, ciencia y cultura (octubre 2025).
+      </p>
 
       <details>
         <summary>Premio Nobel de la Paz 2025: reacciones por el galardón a María Corina Machado</summary>
         <p>
-          La entrega del Premio Nobel de la Paz 2025 a la líder opositora venezolana María Corina Machado generó repercusiones políticas y movilizaciones de la diáspora. La noticia ha sido reportada por agencias internacionales que cubren el impacto político en la región.
+          La entrega del Premio Nobel de la Paz 2025 a la líder opositora venezolana María Corina Machado generó repercusiones políticas y movilizaciones de la diáspora.  
+          La noticia ha sido reportada por agencias internacionales que cubren el impacto político en la región.
         </p>
-        <p class="meta-small">Fuente: Reuters — 10 oct 2025. <a href="https://www.reuters.com/world/americas/nobel-peace-prize-rallies-venezuelas-opposition-deepens-maduros-isolation-2025-10-10/?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">leer artículo</a></p>
+        <p class="meta-small">
+          Fuente: Reuters — 10 oct 2025.  
+          <a href="https://www.reuters.com/world/americas/nobel-peace-prize-rallies-venezuelas-opposition-deepens-maduros-isolation-2025-10-10/?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">Leer artículo</a>
+        </p>
       </details>
 
       <details>
         <summary>World Bank actualiza al alza la previsión de crecimiento para Latinoamérica en 2026</summary>
         <p>
-          El Banco Mundial ajustó su estimación de crecimiento para América Latina y el Caribe en 2026, elevando ligeramente su previsión. Esto refleja señales de recuperación en algunos sectores y ajustes en proyecciones macroeconómicas regionales.
+          El Banco Mundial ajustó su estimación de crecimiento para América Latina y el Caribe en 2026, elevando ligeramente su previsión.  
+          Esto refleja señales de recuperación en algunos sectores y ajustes en proyecciones macroeconómicas regionales.
         </p>
-        <p class="meta-small">Fuente: Reuters — 7 oct 2025. <a href="https://www.reuters.com/world/americas/world-bank-lifts-latin-america-economic-growth-estimate-2026-2025-10-07/" target="_blank" rel="noopener noreferrer">leer artículo</a></p>
+        <p class="meta-small">
+          Fuente: Reuters — 7 oct 2025.  
+          <a href="https://www.reuters.com/world/americas/world-bank-lifts-latin-america-economic-growth-estimate-2026-2025-10-07/" target="_blank" rel="noopener noreferrer">Leer artículo</a>
+        </p>
       </details>
 
       <details>
         <summary>Premio Nobel de Química 2025: avances en marcos metálico-orgánicos (MOFs)</summary>
         <p>
-          El Nobel de Química 2025 fue otorgado por trabajos sobre marcos metálico-orgánicos (MOFs), materiales prometedores para capturar CO₂ y extraer agua del ambiente, con aplicaciones clave en clima y abastecimiento de agua.
+          El Nobel de Química 2025 fue otorgado por trabajos sobre marcos metálico-orgánicos (MOFs), materiales prometedores para capturar CO₂ y extraer agua del ambiente,  
+          con aplicaciones clave en clima y abastecimiento de agua.
         </p>
-        <p class="meta-small">Fuente: AP News — cobertura 2025. <a href="https://apnews.com/article/87dcb74eb01e3d5ba8efc32832e51ef6?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">leer artículo</a></p>
+        <p class="meta-small">
+          Fuente: AP News — cobertura 2025.  
+          <a href="https://apnews.com/article/87dcb74eb01e3d5ba8efc32832e51ef6?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">Leer artículo</a>
+        </p>
       </details>
-    </section>
 
-    <section class="texto-largo noticias-random" aria-labelledby="curiosidades">
-      <h2 id="curiosidades">Curiosidades y ciencia</h2>
+      <h3>Curiosidades científicas</h3>
 
       <details>
         <summary>Pyrocystis fusiformis: dinoflagelado bioluminiscente</summary>
         <p>
-          <em>Pyrocystis fusiformis</em> es un dinoflagelado marino conocido por producir destellos de luz (bioluminiscencia) cuando el agua es perturbada; un fenómeno usado en divulgación científica y aulas para demostrar reacciones químicas y ecológicas.
+          <em>Pyrocystis fusiformis</em> es un dinoflagelado marino conocido por producir destellos de luz (bioluminiscencia) cuando el agua es perturbada;  
+          un fenómeno usado en divulgación científica y aulas para demostrar reacciones químicas y ecológicas.
         </p>
       </details>
 
       <details>
         <summary>Marcos metálico-orgánicos (MOFs): más allá del CO₂</summary>
         <p>
-          Los MOFs son estructuras con poros capaces de atrapar gases y de capturar humedad. Investigaciones recientes exploran su uso para purificar aire industrial, capturar contaminantes y generar fuentes de agua en ambientes secos.
+          Los MOFs son estructuras con poros capaces de atrapar gases y capturar humedad.  
+          Investigaciones recientes exploran su uso para purificar aire industrial, capturar contaminantes y generar agua en ambientes secos.
         </p>
       </details>
 
       <details>
         <summary>Nuevo satélite (prov.) alrededor de Urano detectado por Webb</summary>
         <p>
-          Observaciones recientes con el telescopio espacial James Webb han identificado candidatos a nuevos satélites de Urano; la confirmación requiere seguimiento y observaciones independientes.
+          Observaciones recientes con el telescopio espacial James Webb han identificado candidatos a nuevos satélites de Urano;  
+          la confirmación requiere seguimiento y observaciones independientes.
         </p>
       </details>
-    </section>
-    
- <section class="texto-largo noticias-random" aria-labelledby="recientes">
-      <h2 id="referencias">Referencias / Lecturas originales</h2>
+
+      <h3>Referencias originales</h3>
       <ol>
-        <li><a href="https://www.reuters.com/world/americas/nobel-peace-prize-rallies-venezuelas-opposition-deepens-maduros-isolation-2025-10-10/?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">Reuters — Nobel Peace Prize rallies Venezuela's opposition, deepens Maduro's isolation (10 oct 2025)</a></li>
-        <li><a href="https://www.reuters.com/world/americas/world-bank-lifts-latin-america-economic-growth-estimate-2026-2025-10-07/" target="_blank" rel="noopener noreferrer">Reuters — World Bank lifts Latin America growth estimate for 2026 (7 oct 2025)</a></li>
-        <li><a href="https://apnews.com/article/87dcb74eb01e3d5ba8efc32832e51ef6?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">AP News — Nobel Prize in chemistry goes to discovery that could trap CO₂ and bring water to deserts (cobertura 2025)</a></li>
+        <li><a href="https://www.reuters.com/world/americas/nobel-peace-prize-rallies-venezuelas-opposition-deepens-maduros-isolation-2025-10-10/?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">Reuters — Nobel Peace Prize rallies Venezuela's opposition (10 oct 2025)</a></li>
+        <li><a href="https://www.reuters.com/world/americas/world-bank-lifts-latin-america-economic-growth-estimate-2026-2025-10-07/" target="_blank" rel="noopener noreferrer">Reuters — World Bank lifts Latin America growth estimate (7 oct 2025)</a></li>
+        <li><a href="https://apnews.com/article/87dcb74eb01e3d5ba8efc32832e51ef6?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">AP News — Nobel Prize in Chemistry 2025 (cobertura 2025)</a></li>
       </ol>
     </section>
   </main>
