--- a/carta.html
+++ b/carta.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Carta Fundacional - Hernavia</title>
-  <meta name="description" content="Carta Fundacional de Hernavia: principios, estructura y objetivos que guían a la comunidad hernaviana.">
-  <meta name="keywords" content="hernavia, Carta fundacional, proyecto cultural, identidad, comunidad, sostenibilidad, creatividad, naturaleza, agua, paz, innovación.">
+  <meta name="description" content="Carta Fundacional de Hernavia: documento que establece los principios, misión y estructura inicial del proyecto cultural y comunitario hernaviano.">
+  <meta name="keywords" content="Hernavia, carta fundacional, proyecto cultural, identidad, comunidad, sostenibilidad, naturaleza, innovación, fraternidad, paz">
   <meta name="theme-color" content="#ffffff">
   <meta name="author" content="Proyecto Hernavia">
   <meta name="robots" content="index, follow">
@@ -34,82 +34,84 @@
 
   <main>
     <section class="texto-largo">
-      <h2>Presentación de los Fundadores</h2>
-      <p>Nosotros, los fundadores de Hernavia:</p>
-      <ul>
-        <li>Hernán Coronado, Primer Arconte.</li>
-      </ul>
+      <h2>Presentación</h2>
       <p>
-        Nos unimos para crear una comunidad, identidad y proyecto que proteja y promueva los pilares fundamentales de Hernavia: naturaleza, agua, innovación, fraternidad y paz; así como sus variantes: cohesión, unión, verdad y seguridad.
+        Nosotros, los fundadores de <strong>Hernavia</strong>, proclamamos esta Carta Fundacional como el punto de partida de una comunidad que busca unir identidad, propósito y compromiso con el entorno natural y humano.
+      </p>
+      <p>
+        Hernavia nace para proteger y promover sus pilares fundamentales: <strong>naturaleza, agua, innovación, fraternidad y paz</strong>, junto con sus valores complementarios: cohesión, unión, verdad y seguridad.
       </p>
 
       <h2>Motivación y Propósito</h2>
       <p>
-        Hernavia surge para construir un espacio donde la comunidad viva de manera armónica y responsable, guiada por los valores fundamentales y la protección de sus pilares. Nuestro propósito es organizar un camino para fortalecer la identidad hernaviana, proteger sus pilares y garantizar un entorno seguro, solidario y respetuoso con la naturaleza.
+        La creación de Hernavia responde a la necesidad de construir un espacio donde la comunidad viva de manera armónica, responsable y solidaria. Buscamos fortalecer la identidad hernaviana, fomentar la participación colectiva y promover una convivencia sustentable con el medio ambiente.
       </p>
 
       <h2>Misión</h2>
       <p>
-        Buscar un ambiente de unidad, bienestar compartido y desarrollo sostenible, promoviendo la educación, innovación, cooperación, protección de los recursos naturales y diversas ramas que beneficien a la humanidad y a Hernavia.
+        Forjar un entorno de unidad y bienestar común, impulsando la educación, la innovación, la cooperación y la protección de los recursos naturales, con el fin de contribuir al desarrollo humano y al equilibrio social.
       </p>
 
       <h2>Objetivos Iniciales</h2>
       <ul>
-        <li>Fortalecer la unidad y cohesión de la comunidad hernaviana.</li>
-        <li>Promover la educación cívica y cultural para todos los ciudadanos.</li>
-        <li>Impulsar iniciativas de innovación, creatividad y progreso comunitario.</li>
-        <li>Fomentar el respeto y cuidado de la naturaleza y los recursos comunes.</li>
-        <li>Mantener y difundir los símbolos y la identidad de Hernavia.</li>
+        <li>Fortalecer la cohesión y participación de la comunidad hernaviana.</li>
+        <li>Promover la educación cívica, cultural y científica.</li>
+        <li>Impulsar proyectos de innovación y desarrollo sostenible.</li>
+        <li>Fomentar el respeto y la conservación del entorno natural.</li>
+        <li>Preservar y difundir los símbolos e identidad de Hernavia.</li>
       </ul>
 
-      <h2>Valores y Principios</h2>
+      <h2>Valores Fundamentales</h2>
       <ul>
         <li>Respeto y dignidad hacia cada ciudadano.</li>
-        <li>Cuidado del medio ambiente y los recursos comunes.</li>
-        <li>Participación activa en decisiones, asambleas y eventos.</li>
-        <li>Solidaridad con otros miembros de la comunidad.</li>
-        <li>Innovación y progreso constantes.</li>
-        <li>Fraternidad con otras naciones y culturas, sin perder la identidad hernaviana.</li>
+        <li>Cuidado responsable del medio ambiente y los bienes comunes.</li>
+        <li>Transparencia y cooperación en la toma de decisiones.</li>
+        <li>Solidaridad y apoyo mutuo entre comunidades.</li>
+        <li>Innovación constante al servicio del bien común.</li>
+        <li>Fraternidad y diálogo con otras culturas y proyectos afines.</li>
       </ul>
 
       <h2>Compromisos de los Ciudadanos</h2>
       <ul>
-        <li>Contribuir a la comunidad.</li>
-        <li>Respetar las decisiones del Arconte mientras la autoridad sea provisional.</li>
-        <li>Defender la paz y rechazar la violencia injustificada.</li>
-        <li>Impulsar el desarrollo social mediante cooperación y esfuerzo conjunto.</li>
-        <li>Respetar los símbolos y la identidad de Hernavia.</li>
-        <li>Apoyar a la comunidad en momentos de crisis o emergencia.</li>
+        <li>Participar activamente en el crecimiento y fortalecimiento de Hernavia.</li>
+        <li>Defender los valores de la paz, la verdad y la fraternidad.</li>
+        <li>Respetar las decisiones legítimas de las autoridades comunitarias.</li>
+        <li>Apoyar iniciativas de cooperación, innovación y servicio social.</li>
+        <li>Honrar los símbolos y principios de la comunidad.</li>
       </ul>
 
-      <h2>Arconte</h2>
+      <h2>El Arconte</h2>
       <p>
-        El Arconte es la máxima autoridad provisional de Hernavia. Su poder total es transitorio, mientras se crean instituciones y se forman los recursos humanos necesarios para distribuir las responsabilidades de manera organizada y sostenible.
+        El <strong>Arconte</strong> representa la autoridad provisional de Hernavia durante su etapa fundacional. Su función es guiar el desarrollo inicial de las instituciones y garantizar que todas las acciones estén alineadas con los valores hernavianos.
       </p>
-      <p><strong>Responsabilidades del Arconte:</strong></p>
+      <p><strong>Responsabilidades:</strong></p>
       <ul>
-        <li>Guiar la comunidad y proteger sus pilares fundamentales.</li>
-        <li>Tomar decisiones administrativas, sociales y culturales, siempre en respeto a los valores de Hernavia.</li>
-        <li>Representar y cuidar la identidad y los símbolos de Hernavia.</li>
-        <li>Actuar con ética, transparencia y responsabilidad, promoviendo la participación y consenso ciudadano.</li>
+        <li>Proteger los pilares fundamentales de Hernavia.</li>
+        <li>Coordinar las decisiones administrativas, sociales y culturales.</li>
+        <li>Representar a la comunidad con ética y transparencia.</li>
+        <li>Promover el consenso y la participación ciudadana.</li>
       </ul>
-      <p><strong>Duración del cargo:</strong> Provisional, hasta que Hernavia consolide instituciones y mecanismos de participación ciudadana más sólidos.</p>
-      <p><strong>Relación con la comunidad:</strong> Líder, guía y protector, actuando siempre en beneficio del colectivo, no de intereses individuales.</p>
+      <p>
+        <strong>Duración del cargo:</strong> transitoria, hasta el establecimiento de instituciones y mecanismos participativos más amplios.
+      </p>
 
       <h2>Carácter Provisional</h2>
       <p>
-        Esta Carta es transitoria y podrá evolucionar a medida que Hernavia crezca. Futuras constituciones podrán incorporar la participación directa de toda la comunidad. Mientras tanto, todas las acciones se guían por esta Carta y los principios de Hernavia.
+        Esta Carta Fundacional tiene carácter transitorio y podrá ser actualizada conforme Hernavia evolucione y amplíe su estructura cívica y cultural. Su espíritu permanecerá como base de las futuras constituciones y acuerdos ciudadanos.
       </p>
 
       <h2>Símbolos de Hernavia</h2>
-        <p><strong>Bandera:</strong></p>
-        <img src="img/bandera.png" alt="Bandera de Hernavia" class="bandera" width="200" height="133" loading="lazy">
-        <p><strong>Primer Arconte:</strong> Hernán Coronado.</p>
+      <p><strong>Bandera:</strong></p>
+      <img src="img/bandera.png" alt="Bandera de Hernavia" class="bandera" width="200" height="133" loading="lazy">
+      <p><strong>Autoridad fundacional:</strong> El Primer Arconte de Hernavia.</p>
+
+      <h3 style="text-align:center; margin-top:30px;">Firmado simbólicamente</h3>
+      <p style="text-align:center;"><em>Por la voluntad del pueblo hernaviano y sus fundadores.</em></p>
+      <p style="text-align:center;">Etapa Fundacional — Año 2025</p>
 
       <p style="text-align: center; margin-top: 25px;">
         <a href="documentos.html" class="boton-hernavia">Volver a Documentos</a>
       </p>
-
     </section>
   </main>
 
