--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     <section id="que-es" class="texto-largo">
       <h2>¿Qué es Hernavia?</h2>
       <p>Hernavia es un proyecto identitario que busca un dar un espacio a la innovacion cuidar la naturaleza y hacer actos que beneficien a la comunidad basado en sus principios.</p>
-      <p>Se fundamenta en el respeto y cuidado de la naturaleza, la protección de los animales, el reciclaje, la recolección de basura, el cuidado del agua y la promoción de fines ambientales.</p>
+      <p>Se fundamenta en el respeto y cuidado de la naturaleza, el reciclaje, la recolección de basura, el cuidado del agua y la promoción de fines ambientales.</p>
       <p>Además, Hernavia impulsa la innovación y apoya proyectos que fomentan un espíritu creativo para resolver los desafíos actuales.</p>
       <p>En resumen, la identidad hernaviana se sostiene sobre tres pilares: naturaleza, paz e innovación.</p>
     </section>
 
     <section id="donde" class="texto-largo">
       <h2>¿Dónde se encuentra?</h2>
-      <p>Hernavia nace en Colombia, específicamente en el municipio de Gachancipá, donde se desarrollan sus primeros proyectos y su organización. Actualmente está en una etapa teórica y de planificación, por lo que aún no existen estructuras físicas. Tu participación y sugerencias son esenciales para fortalecerla.</p>
+      <p>Hernavia nace en Colombia, específicamente en el municipio de Gachancipá, donde se desarrolla su organización. Actualmente está en una etapa teórica y de planificación, por lo que aún no existen estructuras ni actos físicos. Tu participación y sugerencias son esenciales para fortalecerla.</p>
     </section>
 
     <section id="bandera" class="texto-largo">
@@ -96,6 +96,16 @@
           <summary>¿Qué beneficios tiene unirse?</summary>
           <p>Participar en Hernavia permite ser parte de decisiones colectivas, apoyar iniciativas locales y acceder a beneficios comunitarios futuros.</p>
         </details>
+        
+         <details class="faq-card">
+          <summary>¿Que a hecho Hernavia?</summary>
+          <p>Hernavia aun esta en etapa teorica o de desarrollo asi que aun no tiene actos fisicos ni presencia real asi pero pronto empezara a tener presencia y podras ver sus avanzes y mas sobre Hernavia sus creadores, proyectos, vision, ejecucion etcetera.</p>
+        </details>
+        
+         <details class="faq-card">
+          <summary>¿Hernavia tiene que ver con la institucion Hernado Navia Varon”?</summary>
+          <p.>No, la institucion academica Hernado Navia varon es una institucion educativa ubicada en cali que celebra la afrocolombianidad hernaviana y usan el termino hernavianos, y aunque hernavia tambien identifica sus ciudadanos como Hernavianos este proyecto no este relacionado con la institucion y son 2 entidades distintas.</p>
+        </details>
       </div>
     </section>
   </main>
@@ -117,3 +127,4 @@
   </script>
 </body>
 </html>
+
