--- a/identidad.html
+++ b/identidad.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Identidad Hernaviana</title>
-  <meta name="description" content="Descubre qué significa ser parte de Hernavia y el valor de nuestra identidad cultural.">
+  <meta name="description" content="Información sobre la identidad hernaviana, sus valores, principios y significado cultural.">
   <meta name="theme-color" content="#ffffff">
   <meta name="keywords" content="Hernavia, identidad, comunidad, cultura, valores, sostenibilidad, sociedad, creatividad, naturaleza, paz, innovación">
   <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
@@ -36,45 +36,41 @@
     <section class="section">
         <h2>¿Qué significa unirse?</h2>
         <p class="texto-largo">
-            Unirse a Hernavia no es solo llenar un formulario o recibir un número simbólico.  
-            Es compartir una visión, una forma de entender la comunidad y asumir la identidad hernaviana como una manera de vivir con orgullo, unión y compromiso.
+            Unirse a Hernavia representa participar en una comunidad cultural que promueve ciertos valores y principios compartidos.  
+            Más allá de una inscripción formal, implica reconocer una forma de colaboración basada en la identidad hernaviana y en la construcción de proyectos comunes.
         </p>
     </section>
 
     <section class="section">
         <h2>Principios de la Identidad Hernaviana</h2>
         <ul>
-            <li><strong>Paz hernaviana:</strong> construir desde la armonía, la cohesión, la verdad y la fraternidad.</li>
-            <li><strong>Innovación hernaviana:</strong> crear nuevas formas de unión y expresión; no quedarse en los métodos clásicos, sino buscar caminos que beneficien a todos.</li>
-            <li><strong>Respeto hernaviano por la naturaleza y cuidado del agua:</strong> cuidar lo que nos rodea y los recursos vitales como el agua es parte esencial de nuestro entorno.</li>
+            <li><strong>paz hernaviana:</strong> fomentar la convivencia pacífica, el diálogo, la cooperación y la empatía entre las personas.</li>
+            <li><strong>Innovación hernaviana:</strong> promover la creatividad y la búsqueda de soluciones colectivas para los retos sociales, culturales y ambientales.</li>
+            <li><strong>Respeto por la naturaleza y el agua:</strong> valorar los recursos naturales y reconocer la importancia del cuidado del entorno y del agua como fuente de vida.</li>
         </ul>
     </section>
 
     <section class="section">
         <h2>Más que un símbolo</h2>
         <p class="texto-largo">
-            La bandera hernaviana y un futuro símbolo sorpresa no son simples dibujos:  
-            son colores para enorgullecerse, para gritar y para seguir.  
-            Imagina un partido de fútbol donde grites por Hernavia y sus colores.  
-            ¿Te emociona esa idea o tienes otra en mente?
+            La bandera hernaviana y otros símbolos representan los valores e ideales del proyecto cultural.  
+            Son expresiones visuales que buscan reflejar unidad, esperanza y compromiso con una visión común.  
+            Cada persona puede interpretarlos y relacionarse con ellos de distintas maneras, según su propia experiencia y sentido de pertenencia.
         </p>
     </section>
 
     <section class="section">
         <h2>La esencia hernaviana</h2>
         <p class="texto-largo">
-            La identidad hernaviana representa valores que hoy en día parecen olvidados:  
-            el respeto al medio ambiente, la protección de la fauna y la flora, la paz, la unión de la comunidad,  
-            la verdad, el respeto mutuo o hasta el poder salir a la calle sin miedo.  
-            Todos estos siempre se escuchan, pero rara vez se ven avances reales.  
-            Por eso, nosotros tomaremos la batuta para hacer lo que nadie más, aunque no se puede lograr sin ti.  
-            Si quieres que las cosas cambien, cambia tú también.  
-            Todo eso y más hace parte de ser hernaviano.
+            La identidad hernaviana reúne principios orientados al respeto por el medio ambiente, la paz, la cooperación y la integridad social.  
+            Promueve una forma de convivencia basada en la verdad, la confianza y el bienestar común.  
+            Su propósito es incentivar la participación ciudadana, el diálogo y la acción conjunta hacia una sociedad más justa y equilibrada.  
+            Ser hernaviano, en este sentido, significa contribuir a esa visión desde la vida cotidiana y las iniciativas personales o comunitarias.
         </p>
     </section>
 
     <section class="section" style="text-align:center;">
-        <p>Recuérdala, tal vez un día no puedas olvidarla.</p>
+        <p>Recuerdala talvez luego no puedas olvidarla.</p>
         <img src="img/bandera.png" 
              alt="Bandera de Hernavia, símbolo cultural de la identidad hernaviana" 
              class="bandera" 
@@ -94,22 +90,22 @@
 
             <details class="faq-card">
                 <summary>¿Qué es Hernavia?</summary>
-                <p>Hernavia es una identidad colectiva y un proyecto cultural. Es un espacio donde las personas viven y luchan por una visión compartida.</p>
+                <p>Hernavia es una iniciativa cultural y simbólica que promueve valores de comunidad, sostenibilidad y cooperación entre sus participantes.</p>
             </details>
 
             <details class="faq-card">
                 <summary>¿Hernavia es un país real?</summary>
-                <p>Puede considerarse una micronación o comunidad cultural no reconocida oficialmente. Aunque no tenga reconocimiento legal, funciona como una organización con principios, valores y proyectos propios.</p>
+                <p>No. Hernavia se define como una comunidad cultural o proyecto simbólico. Aunque utiliza elementos inspirados en las micronaciones, su enfoque principal es educativo, cívico y cultural.</p>
             </details>
 
             <details class="faq-card">
                 <summary>¿Cuáles son los principios de Hernavia?</summary>
-                <p>Se fundamenta en la paz, la innovación, el respeto por la naturaleza, el cuidado del agua, la unión comunitaria y la verdad.</p>
+                <p>Sus fundamentos se basan en la paz, la innovación, el respeto por la naturaleza, el cuidado del agua, la unión comunitaria y la búsqueda de la verdad.</p>
             </details>
 
             <details class="faq-card">
-                <summary>¿Puedo considerarme hernaviano aunque no sea ciudadano?</summary>
-                <p>Sí. Aunque no tengas ciudadanía hernaviana, puedes <strong>ser hernaviano</strong> como identidad cultural y simbólica. No necesitas registro ni reconocimiento oficial para sentirte parte de Hernavia.</p>
+                <summary>¿Puedo considerarme hernaviano aunque no tenga registro?</summary>
+                <p>Sí. La identidad hernaviana puede asumirse de manera simbólica o cultural, sin necesidad de un proceso formal. Cualquier persona que comparta sus valores puede sentirse parte de ella.</p>
             </details>
 
         </div>
@@ -134,3 +130,4 @@ toggleButton.addEventListener('click', () => {
 
 </body>
 </html>
+
