--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
   </nav>
 
   <main>
+      <section id="redirige" class="texto-largo">
+        <p>si estas aqui es probable que entraste por el QR en la feria empresarial asi que te invitamos a luego de revisar esta pagina ir a la de otro proyecto de Hernavia que te interesara si vives en Gachancipa aunque en etapa temprana si se ve apoyo el desarrollo se acelerar, no dudes en cualquier cosa comunicarte ya sea por la pagina o directamente en el puesto de Yukiherts</p>
+    <button id="toggleFAQ" class="faq-toggle" onclick="window.location.href='https://hernavia.github.io/gachancipa-digital/inicio.vE'">
+  Ir a ver
+</button>
+
+</a>
+
     <section id="que-es" class="texto-largo">
       <h2>¿Qué es Hernavia?</h2>
       <p>Hernavia es un proyecto identitario que busca un dar un espacio a la innovacion cuidar la naturaleza y hacer actos que beneficien a la comunidad basado en sus principios.</p>
@@ -127,4 +135,5 @@
   </script>
 </body>
 </html>
+
 
