--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
     <button id="toggleFAQ" class="faq-toggle" onclick="window.location.href='https://hernavia.github.io/gachancipa-digital/inicio.vE'">
   Ir a ver
 </button>
-
-</a>
+      </section>
 
     <section id="que-es" class="texto-largo">
       <h2>¿Qué es Hernavia?</h2>
@@ -135,5 +134,6 @@
   </script>
 </body>
 </html>
+
 
 
