--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <main>
       <section id="redirige" class="texto-largo">
         <p>si estas aqui es probable que entraste por el QR en la feria empresarial asi que te invitamos a luego de revisar esta pagina ir a la de otro proyecto de Hernavia que te interesara si vives en Gachancipa aunque en etapa temprana si se ve apoyo el desarrollo se acelerar, no dudes en cualquier cosa comunicarte ya sea por la pagina o directamente en el puesto de Yukiherts</p>
-    <button id="toggleFAQ" class="faq-toggle" onclick="window.location.href='https://hernavia.github.io/gachancipa-digital/inicio.vE'">
+    <button id="toggleFAQ" class="faq-toggle" onclick="window.location.href='https://hernavia.github.io/gachancipa-digital/iniciovE.html'">
   Ir a ver
 </button>
       </section>
@@ -134,6 +134,7 @@
   </script>
 </body>
 </html>
+
 
 
 
