--- a/noticias.html
+++ b/noticias.html
@@ -41,16 +41,28 @@
     </nav>
   </div>
 
-  <main>
-    <section class="texto-largo">
-      <h2>Noticia 002 – Feria Empresarial en Gachancipá</h2>
-      <p>En el parque principal de Gachancipá se llevará a cabo la Semana Cultural, del jueves 30 de octubre al domingo 2 de noviembre.</p>
-      <p>El jueves 31 de octubre, de 10:00 a.m. a 2:00 p.m., se habilitará un espacio para una feria empresarial, donde participarán varios negocios. Yukiherts venderá sus deliciosos pastelitos de yuca, y Hernavia estará presente aportando su sello de calidad y colaboración, apoyando en la planeación y con algunos materiales, sirviendo como participacion y promocion conjunta.</p>
-      <p>Durante toda la Semana Cultural habrá más actividades en Gachancipá para disfrutar.</p>
-      <p style="margin-top:20px;">Fuente: Comunicación interna de Hernavia, octubre de 2025.</p>
-    </section>
-  </main>
+<main>
+  <section class="texto-largo">
+    <h2>Noticia 002 – Semana cultural en Gachancipá</h2>
+    <p>En el parque principal de Gachancipá se llevará a cabo la Semana Cultural.</p>
+    <p>Habrá diversidad de eventos y muchas cosas interesantes, desde negocios muy diversos hasta algunas atracciones, dependiendo del día. Más información en la fuente oficial.</p>
+    <p style="margin-top:20px;">
+      Fuente: 
+      <a href="https://gachancipa-cundinamarca.gov.co/publicaciones/566/programacion-xxx-semana-cultural-internacional-de-gachancipa/" 
+         target="_blank" 
+         rel="noopener noreferrer">
+        Alcaldía de Gachancipá — Programación XXX Semana Cultural Internacional de Gachancipá
+      </a>.
+    </p>
+  </section>
+</main>
 
+  <main>
+  <section class="texto-largo">
+    <h2>Noticia 003 - Proxima Etapa</h2>
+<p>Hernavia luego de largo planteamiento esta cerca de pasar de su primera etapa "teorica" a la "fisica" con lo cual empezara a tener accion e impacto real, mantente pendiente para el momento pues aun falta unas semanas pero se avisara poco antes</p>
+  </section>
+  </main>
   <footer>
     &copy; 2025 Hernavia — Proyecto Cultural
   </footer>
