--- a/noticias.html
+++ b/noticias.html
@@ -61,6 +61,7 @@
   <section class="texto-largo">
     <h2>Noticia 003 - Proxima Etapa</h2>
 <p>Hernavia luego de largo planteamiento esta cerca de pasar de su primera etapa "teorica" a la "fisica" con lo cual empezara a tener accion e impacto real, mantente pendiente para el momento pues aun falta unas semanas pero se avisara poco antes</p>
+    <p>Fuente: Comunicacion interna de Hernavia</p>
   </section>
   </main>
   <footer>
