--- a/index.html
+++ b/index.html
@@ -34,15 +34,17 @@
 <main>
     <section id="que-es" class="texto-largo">
       <h2>¿Qué es Hernavia?</h2>
-      <p>Hernavia es un proyecto identitario que busca un dar un espacio a la innovacion cuidar la naturaleza y hacer actos que beneficien a la comunidad basado en sus principios.</p>
-      <p>Se fundamenta en el respeto y cuidado de la naturaleza, el reciclaje, la recolección de basura, el cuidado del agua y la promoción de fines ambientales.</p>
-      <p>Además, Hernavia impulsa la innovación y apoya proyectos que fomentan un espíritu creativo para resolver los desafíos actuales.</p>
-      <p>En resumen, la identidad hernaviana se sostiene sobre tres pilares: naturaleza, paz e innovación.</p>
+      <p>Hernavia es un proyecto que impulsa el desarrollo, la modernización y el cuidado profundo de la naturaleza, construyendo un camino basado en principios claros y prácticos que evolucionan junto con la comunidad.</p>
+      <p>La innovación es uno de sus pilares centrales: se buscan formas nuevas y más acertadas de avanzar, métodos que permitan resolver problemas reales con soluciones simples, eficientes y humanas. El progreso, entendido así, no es una carrera, sino una adaptación constante a lo que cada territorio necesita.</p>
+      <p>El cuidado ambiental ocupa un lugar esencial. Hernavia promueve la protección del agua, la preservación de las zonas verdes y el respeto por las especies que conviven con nosotros. Cada acción se piensa para que desarrollo y naturaleza crezcan en equilibrio, sin que uno devore al otro.</p>
+      <p>La cohesión comunitaria se trabaja a través de la comunicación clara, el entendimiento mutuo y la prevención de conflictos. Aquí entran los MASC, mecanismos que permiten resolver diferencias sin confrontación, escuchando, conversando y construyendo acuerdos. Más que una regla, es una forma de convivencia que ayuda a que las comunidades mantengan su fuerza interna y una identidad que nace de lo que hacen juntas, no de lo que se impone desde afuera.</p>
+      <p>La cultura es el puente que conecta todo. Hernavia se inspira en sus raíces, en las formas de vida, símbolos y memorias que existen en su territorio, y las proyecta hacia el futuro sin romper con su origen. Fomenta la fraternidad con Colombia —su marco cultural mayor— y al mismo tiempo dialoga con todas las demás culturas, tomando de cada una aquello que fortalezca un tejido común. Es una identidad que no cierra puertas: se expande al ritmo de quienes la construyen.</p>
     </section>
 
     <section id="donde" class="texto-largo">
       <h2>¿Dónde se encuentra?</h2>
-      <p>Hernavia nace en Colombia, específicamente en el municipio de Gachancipá, donde se desarrolla su organización. Actualmente está en una etapa teórica y de planificación, por lo que aún no existen estructuras ni actos físicos. Tu participación y sugerencias son esenciales para fortalecerla.</p>
+      <p>Hernavia nace en Gachancipá, donde se forma su visión inicial y desde donde se proyecta su expansion.</p>
+      <p>En este momento, Hernavia se encuentra en una etapa principalmente teórica y de diseño. Está construyendo sus fundamentos, definiendo sus principios, organizando su estructura y preparando los planes que guiarán sus primeros pasos. Aunque aún no desarrolla acciones físicas ni proyectos visibles, se encuentra afinando todo lo necesario para comenzar a operar de forma real en un futuro cercano</p>
     </section>
 
     <section id="bandera" class="texto-largo">
@@ -53,9 +55,10 @@
     <section id="significado" class="texto-largo">
       <h2>Significado de los colores</h2>
       <ul>
-        <li><strong>Verde:</strong> Representa la naturaleza, el agua y la innovación.</li>
-        <li><strong>Blanco:</strong> Simboliza la paz, la unión y la verdad.</li>
-        <li><strong>Amarillo:</strong> Hace referencia a las raíces con Colombia y la fraternidad.</li>
+        <p>Cada uno de los colores represneta uno de sus pilares como se menciona a continuacion.</p>
+        <li><strong>Verde:</strong> Representa la naturaleza y la innovacion.</li>
+        <li><strong>Blanco:</strong> Representa la cohesion union de la comunidad la verdad y demas principios de paz.</li>
+        <li><strong>Amarillo:</strong> Representa las raíces con Colombia y la fraternidad.</li>
       </ul>
     </section>
 
@@ -78,18 +81,8 @@
         </details>
 
         <details class="faq-card">
-          <summary>¿Por qué la ciudadanía virtual aún no está disponible?</summary>
-          <p>Porque actualmente no existen mecanismos suficientes para equilibrar derechos y deberes entre ciudadanos virtuales y presenciales. Se planea activar en el futuro, cuando existan más herramientas de gestión.</p>
-        </details>
-
-        <details class="faq-card">
           <summary>¿Existen riesgos legales al unirse?</summary>
           <p>No. Hernavia funciona como un proyecto ciudadano y no tiene implicaciones legales. Las sanciones o medidas internas no afectan la vida legal o civil de los participantes.</p>
-        </details>
-
-        <details class="faq-card">
-          <summary>¿Tiene afiliación política o religiosa?</summary>
-          <p>No. Hernavia es totalmente neutral. Puede coincidir con ciertas ideas, pero nunca adopta afiliaciones políticas o religiosas.</p>
         </details>
 
         <details class="faq-card">
@@ -127,6 +120,7 @@
   </script>
 </body>
 </html>
+
 
 
 
