--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     <section id="que-es" class="texto-largo">
       <h2>¿Qué es Hernavia?</h2>
       <p>Hernavia es un proyecto que impulsa el desarrollo, la modernización y el cuidado profundo de la naturaleza, construyendo un camino basado en principios claros y prácticos que evolucionan junto con la comunidad.</p>
-      <p>La innovación es uno de sus pilares centrales: se buscan formas nuevas y más acertadas de avanzar, métodos que permitan resolver problemas reales con soluciones simples, eficientes y humanas. El progreso, entendido así, no es una carrera, sino una adaptación constante a lo que cada territorio necesita.</p>
+      <p>La innovación es uno de sus pilares centrales se centra en buscar formas nuevas y más acertadas de avanzar, métodos que permitan resolver problemas reales con soluciones simples y eficientes.</p>
       <p>El cuidado ambiental ocupa un lugar esencial. Hernavia promueve la protección del agua, la preservación de las zonas verdes y el respeto por las especies que conviven con nosotros. Cada acción se piensa para que desarrollo y naturaleza crezcan en equilibrio, sin que uno devore al otro.</p>
-      <p>La cohesión comunitaria se trabaja a través de la comunicación clara, el entendimiento mutuo y la prevención de conflictos. Aquí entran los MASC, mecanismos que permiten resolver diferencias sin confrontación, escuchando, conversando y construyendo acuerdos. Más que una regla, es una forma de convivencia que ayuda a que las comunidades mantengan su fuerza interna y una identidad que nace de lo que hacen juntas, no de lo que se impone desde afuera.</p>
-      <p>La cultura es el puente que conecta todo. Hernavia se inspira en sus raíces, en las formas de vida, símbolos y memorias que existen en su territorio, y las proyecta hacia el futuro sin romper con su origen. Fomenta la fraternidad con Colombia —su marco cultural mayor— y al mismo tiempo dialoga con todas las demás culturas, tomando de cada una aquello que fortalezca un tejido común. Es una identidad que no cierra puertas: se expande al ritmo de quienes la construyen.</p>
+      <p>La cohesión es el pilar que impulsa la unión de la comunidad fomentando la union el respeto la solucion pacifica de conflictos y la verdad de lo que se le dice a la gente tanto para personas como entidades.</p>
+      <p>La fraternidad representa el respeto profundo tanto por la propia identidad cultural como por las demás. Invita a mantener vivas las raíces, valorar el origen y, al mismo tiempo, abrir caminos de entendimiento con otras culturas. Este pilar impulsa la convivencia, el intercambio y la conexión entre comunidades sin perder lo propio ni cerrarse al mundo.</p>
     </section>
 
     <section id="donde" class="texto-largo">
@@ -120,6 +120,7 @@
   </script>
 </body>
 </html>
+
 
 
 
