--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
     <section id="que-es" class="texto-largo">
       <h2>¿Qué es Hernavia?</h2>
       <p>Hernavia es un proyecto que impulsa el desarrollo, la modernización y el cuidado profundo de la naturaleza, construyendo un camino basado en principios claros y prácticos que evolucionan junto con la comunidad.</p>
-      <p>La innovación es uno de sus pilares centrales se centra en buscar formas nuevas y más acertadas de avanzar, métodos que permitan resolver problemas reales con soluciones simples y eficientes.</p>
-      <p>El cuidado ambiental ocupa un lugar esencial. Hernavia promueve la protección del agua, la preservación de las zonas verdes y el respeto por las especies que conviven con nosotros. Cada acción se piensa para que desarrollo y naturaleza crezcan en equilibrio, sin que uno devore al otro.</p>
-      <p>La cohesión es el pilar que impulsa la unión de la comunidad fomentando la union el respeto la solucion pacifica de conflictos y la verdad de lo que se le dice a la gente tanto para personas como entidades.</p>
+      <p>La innovación es uno de sus pilares centrales, se centra en buscar formas nuevas y más acertadas de avanzar, métodos que permitan resolver problemas reales con soluciones simples y eficientes.</p>
+      <p>El cuidado ambiental ocupa un lugar esencial. Hernavia promueve la protección del agua, la preservación de las zonas verdes y el respeto por las especies que conviven con nosotros. Cada acción se piensa para que el desarrollo y la naturaleza crezcan en equilibrio, sin que uno devore al otro.</p>
+      <p>La cohesión es el pilar que impulsa la unión de la comunidad, fomentando la unión, el respeto, la solución pacífica de conflictos y la verdad de lo que se le dice a la gente tanto para personas como entidades.</p>
       <p>La fraternidad representa el respeto profundo tanto por la propia identidad cultural como por las demás. Invita a mantener vivas las raíces, valorar el origen y, al mismo tiempo, abrir caminos de entendimiento con otras culturas. Este pilar impulsa la convivencia, el intercambio y la conexión entre comunidades sin perder lo propio ni cerrarse al mundo.</p>
     </section>
 
     <section id="donde" class="texto-largo">
       <h2>¿Dónde se encuentra?</h2>
-      <p>Hernavia nace en Gachancipá, donde se forma su visión inicial y desde donde se proyecta su expansion.</p>
-      <p>En este momento, Hernavia se encuentra en una etapa principalmente teórica y de diseño. Está construyendo sus fundamentos, definiendo sus principios, organizando su estructura y preparando los planes que guiarán sus primeros pasos. Aunque aún no desarrolla acciones físicas ni proyectos visibles, se encuentra afinando todo lo necesario para comenzar a operar de forma real en un futuro cercano</p>
+      <p>Hernavia nace en Gachancipá, donde se forma su visión inicial y desde donde se proyecta su expansión.</p>
+      <p>En este momento, Hernavia se encuentra en una etapa principalmente teórica y de diseño. Está construyendo sus fundamentos, definiendo sus principios, organizando su estructura y preparando los planes que guiarán sus primeros pasos. Aunque aún no desarrolla acciones físicas ni proyectos visibles, se encuentra afinando todo lo necesario para comenzar a operar de forma real en un futuro cercano.</p>
     </section>
 
     <section id="bandera" class="texto-largo">
@@ -55,9 +55,9 @@
     <section id="significado" class="texto-largo">
       <h2>Significado de los colores</h2>
       <ul>
-        <p>Cada uno de los colores represneta uno de sus pilares como se menciona a continuacion.</p>
-        <li><strong>Verde:</strong> Representa la naturaleza y la innovacion.</li>
-        <li><strong>Blanco:</strong> Representa la cohesion union de la comunidad la verdad y demas principios de paz.</li>
+        <p>Cada uno de los colores represneta uno de sus pilares como se menciona a continuación.</p>
+        <li><strong>Verde:</strong> Representa la naturaleza y la innovación.</li>
+        <li><strong>Blanco:</strong> Representa la cohesión, unión de la comunidad la verdad y demás principios de paz.</li>
         <li><strong>Amarillo:</strong> Representa las raíces con Colombia y la fraternidad.</li>
       </ul>
     </section>
@@ -120,6 +120,7 @@
   </script>
 </body>
 </html>
+
 
 
 
